# us

./: .env.example  .gitignore  AGENTS.md  App.tsx  CLAUDE.md  README.md  capacitor.config.ts  eslint.config.js  icon.md  index.css  index.html  memories_backup.json  metadata.json  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  signing.properties.example  supabase_setup.sql  tailwind.config.js  test-browser.js  types.ts  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
.kiro/settings/: lsp.json
.tocodex/plans/: next-ux-opportunities.md  ux-feature-improvement-plan.md
.tocodex/progress/: 019dbf77-b90d-7692-9d69-30d0e903a455.json
apps/desktop/: TAURI_DEV_GUIDE.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/.cargo/: config.toml
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: index.html  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
components/: Composer.tsx  MemoryCard.tsx
dev-dist/: sw.js
doc/: PROJECT_STRUCTURE.md  index.md
scripts/: build-android.bat  build-android.ps1  export_memories.js  generate-android-keystore.ps1  test-browser.js
services/: storageService.ts
src/: App.tsx  index.css  types.ts
src/components/: Composer.tsx  Game2048.tsx  GravityMode.tsx  Header.tsx  LazyImage.tsx  LoginPhase.tsx  MainPhase.tsx  MemoryCard.tsx  PiggyBank.tsx  PresenceIndicator.tsx  (+2 more)
(+77 files in other folders)
