[package]
name = "us-shared-memory-journal"
version = "1.0.0"
description = "Us - A Shared Memory Journal Desktop App"
authors = ["you"]
edition = "2021"

[lib]
name = "us_shared_memory_journal_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-notification = "2.3.3"
window-vibrancy = "0.7.1"
